# hermes-agent

./: .gitignore  batch_runner.py  cli.py  model_tools.py  run_agent.py
proofs/hermes-NLCDM/python/: bench_vectorize.py  cma_optimizer.py  conftest.py  coupled_engine.py  discriminative_probe.py  dream_metrics.py  dream_ops.py  embed_170k.py  extract_memories.py  gpu_ops.py  hard_bridges.py  longitudinal_eval.py  multidomain_eval.py  nlcdm_core.py  optuna_optimizer.py  pyproject.toml  run_capacity_gating_eval.py  run_cma_optimizer.py  run_coretrieval_sweep.py  run_crossdomain_sweep.py  run_dream_coretrieval_sweep.py  run_fine_bonus_sweep.py  run_grid_sweep.py  run_multidomain_sweep.py  run_optuna_optimizer.py  test_benchmark.py  test_bridge_integration.py  test_capacity_boundary.py  test_coupled_engine.py  test_dream_convergence.py  test_dream_lifecycle.py  test_dream_ops.py  test_dream_redesign.py  test_dream_safety.py  test_dream_scalability.py  test_dream_scale.py  test_dream_validation.py  test_emotional_sweep.py  test_h3_real_embeddings.py  test_longitudinal_eval.py  (+9 more)
proofs/hermes-NLCDM/python/impl/: discriminative-results.md  spec.md  temporal-hebbian-spec.md
proofs/hermes-NLCDM/python/mabench/: __init__.py  belief.py  cooc_discriminative.py  gate_sweep.py  hermes_agent.py  hermes_config.yaml  insights.md  qwalk_smoke.py  run_hermes.py
proofs/hermes-NLCDM/python/tests/: test_belief.py  test_capacity_gating.py  test_cma_optimizer.py  test_coherence_switching.py  test_cooc_ppr.py  (+21 more)
proofs/hermes-memory/python/: baseline.txt  pyproject.toml  run_tests.sh
(+246 files in other folders)
